--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "axios": "^1.9.0",
     "client": "file:",
     "framer-motion": "^10.18.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "lottie-react": "^2.4.1",
     "mapbox-gl": "^1.13.0",
     "next": "^14.2.10",
@@ -25,6 +27,7 @@
     "npm-force-resolutions": "^0.0.10",
     "react": "^18.3.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.66.1",
     "react-icons": "^4.12.0",
     "react-toastify": "^9.1.3",
     "reactstrap": "^9.2.1"
